-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.6.0
-
None
-
None
-
6928ffb7533d23f0be220116a7b11d90bee72fb5
In the documentation of Qt::WindowFlags Qt::Dialog it's stated that "Indicates that the widget is a window that should be decorated as a dialog". However, on S60 using this flag doesn't have any impact on the appearance of a QWidget. The widget should get the dialog background and other possible dialog decorations when this flag is used.