QWidget with the window flag Qt::Dialog is not decorated as a dialog

Previously style casted widgets to QDialog to see if it is able to
draw dialog background theme graphic.

As a fix, we now query window flag from the widget and if it is
equivalent of Qt::Dialog, draw dialog background.

Task-number: QTBUG-5930
Reviewed-by: Janne Koskinen